aws/cloudformation/vpc-build-cloudformation.yaml
WSTemplateFormatVersion: 2010-09-09
# Cloud Formation template - personal use to provision AWS resources using IAC. 
Resources:
    # First, a VPC:
    myVPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.1.0.0/16
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
        - Key: Name
          Value:  !Join ['', [!Ref "AWS::StackName", "-myVPC" ]]
    
      # VPC will need internet access:     
    InternetGateway:
      Type: AWS::EC2::InternetGateway
      DependsOn: myVPC
    AttachGateway:
      Type: AWS::EC2::VPCGatewayAttachment
        # you can't attach an IGW to a VPC unless both are created:
      Properties:
       VpcId: !Ref myVPC
       InternetGatewayId: !Ref InternetGateway
    PublicSubnetA:
      Type: AWS::EC2::Subnet
      Properties:
       VpcId: !Ref myVPC
       CidrBlock: 10.1.10.0/24
       AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list       
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-A
    PublicSubnetB:
      Type: AWS::EC2::Subnet
      Properties:
       VpcId: !Ref myVPC
       CidrBlock: 10.1.20.0/24
       AvailabilityZone: !Select [ 1, !GetAZs ]    # Get the second AZ in the list 
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-B
    PrivateSubnetA:
      Type: AWS::EC2::Subnet
      Properties:
       VpcId: !Ref myVPC
       CidrBlock: 10.1.50.0/24
       AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list 
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Private-A
    PrivateSubnetB:
      Type: AWS::EC2::Subnet
      Properties:
       VpcId: !Ref myVPC
       CidrBlock: 10.1.60.0/24
       AvailabilityZone: !Select [ 1, !GetAZs ]    # Get the second AZ in the list 
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Private-B
    
      # Some route tables for our subnets:
    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
       VpcId: !Ref myVPC
       Tags:
       - Key: Name
         Value: Public
    PublicRoute1:   # Public route table has direct routing to IGW:
      Type: AWS::EC2::Route
      DependsOn: AttachGateway
      Properties:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
    # Here is a private route table:
    PrivateRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
       VpcId: !Ref myVPC
       Tags:
       - Key: Name
         Value: Private
    PrivateRoute1:            # Private route table can access web via NAT
      Type: AWS::EC2::Route
      Properties:
       RouteTableId: !Ref PrivateRouteTable
       DestinationCidrBlock: 0.0.0.0/0
  # Route traffic through the NAT Gateway:
       NatGatewayId: !Ref NATGateway
    
     # NAT Gateway:
    NATGateway:
      Type: AWS::EC2::NatGateway
      Properties:
       AllocationId: !GetAtt ElasticIPAddress.AllocationId
       SubnetId: !Ref PublicSubnetA
       Tags:
       - Key: Name
         Value: !Sub NAT-${AWS::StackName}
    ElasticIPAddress:
      Type: AWS::EC2::EIP
      Properties:
       Domain: myVPC
    
    # Attach the public subnets to public route tables,
  # and attach the private subnets to private route tables:   
    PublicSubnetARouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
       SubnetId: !Ref PublicSubnetA
       RouteTableId: !Ref PublicRouteTable
    PublicSubnetBRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
       SubnetId: !Ref PublicSubnetB
       RouteTableId: !Ref PublicRouteTable
    PrivateSubnetARouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
       SubnetId: !Ref PrivateSubnetA
       RouteTableId: !Ref PrivateRouteTable
    PrivateSubnetBRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
       SubnetId: !Ref PrivateSubnetB
       RouteTableId: !Ref PrivateRouteTable
